samples/_failures_safe/1761369688_7a9ac4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77d94df4.c: In function ‘main’:
./samples/SAFE/__tmp_77d94df4.c:156:5: error: expected expression at end of input
  156 |     int unique_count = count_unique_words(words, word_count,
      |     ^~~
./samples/SAFE/__tmp_77d94df4.c:156:5: error: expected declaration or statement at end of input
